attempt at fixing an issue where 'fictional points' were getting through move projection while players are in homeStretch

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -137,7 +137,7 @@ h1 {
 
 #button-holder button{
 	display: inline;
-	padding: 10px;
+	margin: 10px;
 }
 /* Game Pieces and Board */
 
